<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ConnectActivity">
    <item android:id="@+id/action_connect" android:title="@string/action_connect"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:visible="true" />
    <item android:id="@+id/action_disconnect" android:title="@string/action_disconnect"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/scan_progress_item"
        android:title="@string/connecting"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/scanner_progress"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />
</menu>
