<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="@dimen/text_padding"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/loading"
        android:layout_weight="2"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/property_read"
            android:visibility="gone"
            android:id="@+id/property_read"
            android:paddingLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/property_write"
            android:visibility="gone"
            android:id="@+id/property_write"
            android:paddingLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/property_notify"
            android:visibility="gone"
            android:id="@+id/property_notify"
            android:paddingLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/property_none"
            android:visibility="gone"
            android:id="@+id/property_none"
            android:paddingLeft="@dimen/activity_horizontal_margin" />
    </LinearLayout>


</LinearLayout>